--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "start:dev": "nodemon --config tooling/nodemon.json --inspect",
     "test": "jest -c tooling/jest.config.js",
     "test:watch": "npm run test -- --watch",
-    "test:coverage": "npm run test -- --coverage"
+    "test:coverage": "npm run test -- --coverage",
+    "test:ci": "jest -c tooling/jest.config.js --ci --runInBand --reporters=default --reporters=jest-junit"
+  },
+  "jest-junit": {
+    "outputDirectory": "./test-results",
+    "outputName": "junit.xml"
   },
   "repository": {
     "type": "git",
@@ -39,6 +44,7 @@
     "@types/pg": "^8.10.2",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "nodemon": "^3.0.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
