--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,12 @@
-name: CI Pipeline
+name: CI
 
 on:
   push:
-    branches:
-      - '**'   # run on all branches
+    branches: ["*"]
   pull_request:
-    branches:
-      - main
 
 jobs:
-  test-and-build:
+  test:
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -27,68 +24,49 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: Checkout code
+      - name: Checkout source
         uses: actions/checkout@v4
-
-      - name: Cache npm dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Build test image (with caching)
       - name: Build test image
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile
-          target: test
-          tags: app:test
-          load: true # needed to run container locally
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          target: tester
+          load: true
+          tags: test-image:latest
 
       - name: Run tests
         run: |
           docker run --rm \
             --network host \
             -e DATABASE_URL=postgres://swapi:password@localhost:5432/swapi \
-            -v $PWD:/home/node/app \
-            -w /home/node/app \
-            app:test npm test
+            test-image:latest
 
-      - name: Publish Test Results
-        if: always()
-        uses: mikepenz/action-junit-report@v4
-        with:
-          report_paths: 'junit.xml'
-          require_tests: true
-
-      - name: Upload test results
+      - name: Upload test results (JUnit)
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-results
-          path: junit.xml
+          name: junit-results
+          path: ./test-results/junit.xml
 
-      # Push release image only from main branch
-      - name: Log in to ttl.sh
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: echo "${{ secrets.TTL_SH_TOKEN }}" | docker login ttl.sh -u anonymous --password-stdin
+  release:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref_type == 'branch'
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-      - name: Build and push release image
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        uses: docker/build-push-action@v6
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build & push release image
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile
           target: production
-          tags: ttl.sh/floatschedule-sre-assignment:${{ github.sha }}
           push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: ttl.sh/${{ github.repository }}:${{ github.sha }}
