--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: ["*"]
+    branches: ["*"] # run on all branches
   pull_request:
 
 jobs:
@@ -27,6 +27,14 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
+      - name: Cache npm dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -34,16 +42,20 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile
           target: tester
           load: true
           tags: test-image:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Run tests
-        run: |
-          docker run --rm \
-            --network host \
-            -e DATABASE_URL=postgres://swapi:password@localhost:5432/swapi \
-            test-image:latest
+        run: docker run --rm \
+          --network host \
+          -e DATABASE_URL=postgres://swapi:password@localhost:5432/swapi \
+          -v $PWD:/app \
+          -w /app \
+          test-image:latest
 
       - name: Upload test results (JUnit)
         if: always()
@@ -63,10 +75,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build & push release image
+      - name: Build & push production image
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile
           target: production
-          push: true
           tags: ttl.sh/${{ github.repository }}:${{ github.sha }}
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
