--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: ["*"] # run on all branches
+    branches: ["*"]
   pull_request:
 
 jobs:
@@ -27,6 +27,9 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Cache npm dependencies
         uses: actions/cache@v4
         with:
@@ -35,27 +38,28 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Build test image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
-          target: tester
-          load: true
+          target: test
           tags: test-image:latest
+          load: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Run tests
-        run: docker run --rm \
-          --network host \
-          -e DATABASE_URL=postgres://swapi:password@localhost:5432/swapi \
-          -v $PWD:/app \
-          -w /app \
-          test-image:latest
+      - name: List Docker images
+        run: docker images | grep test-image
+
+      - name: Run tests inside container
+        run: |
+          docker run --rm \
+            --network host \
+            -e DATABASE_URL=postgres://swapi:password@localhost:5432/swapi \
+            -v "$PWD":/app \
+            -w /app \
+            test-image:latest
 
       - name: Upload test results (JUnit)
         if: always()
@@ -67,7 +71,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref_type == 'branch'
+    if: github.ref_type == 'branch' && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
@@ -75,13 +79,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build & push production image
-        uses: docker/build-push-action@v5
+      - name: Log in to ttl.sh
+        run: echo "${{ secrets.TTL_SH_TOKEN }}" | docker login ttl.sh -u anonymous --password-stdin
+
+      - name: Build & push release image
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           target: production
-          tags: ttl.sh/${{ github.repository }}:${{ github.sha }}
+          tags: ttl.sh/floatschedule-sre-assignment:${{ github.sha }}
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
