--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: CI
 
 on:
   push:
-    branches: ["*"]
-  pull_request:
+    branches: ["*"]    # every push
+  pull_request:        # all PRs
 
 jobs:
   test:
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Cache npm dependencies
+      - name: Cache npm
         uses: actions/cache@v4
         with:
           path: ~/.npm
@@ -48,9 +48,6 @@ jobs:
           load: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-      - name: List Docker images
-        run: docker images | grep test-image
 
       - name: Run tests inside container
         run: |
