--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: CI
 
 on:
   push:
-    branches: ["*"]    # every push
-  pull_request:        # all PRs
+    branches: ["*"]
+  pull_request:
 
 jobs:
   test:
@@ -24,11 +24,9 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-buildx-action@v3
 
       - name: Cache npm
         uses: actions/cache@v4
@@ -70,11 +68,8 @@ jobs:
     needs: test
     if: github.ref_type == 'branch' && github.ref == 'refs/heads/main'
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
 
       - name: Log in to ttl.sh
         run: echo "${{ secrets.TTL_SH_TOKEN }}" | docker login ttl.sh -u anonymous --password-stdin
