--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
       - uses: docker/setup-buildx-action@v3
 
       - name: Log in to ttl.sh anonymously
-        run: echo "" | docker login ttl.sh -u anonymous --password-stdin
+        run: docker login ttl.sh -u anonymous
 
       - name: Build & push release image
         uses: docker/build-push-action@v6
